--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,13 +8,9 @@
     <string name="female">Female</string>
     <string name="male">Male</string>
     <string name="submit_txt">Submit</string>
-    <string name="title_activity_login">LoginActivity</string>
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
+    <string name="loading">Submitting ...</string>
+    <string name="on_success">Submission Successful</string>
+    <string name="proceed">Proceed</string>
+    <string name="success_screen_text1">Success</string>
+    <string name="success_screen_text2">Congratulations, your registration has been successfully created.</string>
 </resources>
